--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Васильев Лаба 3</title>
         <link rel="stylesheet" href="/css/main_css.css">
-        <script src="/js/db.js"></script>
+        <script src="app.js"></script>
     </head>
     <body>
         <header>
