--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
-<html>
-    <head>
+    <head lang="ru">
         <title>Васильев Лаба 3</title>
-        <link rel="stylesheet" href="/css/main_css.css">
+        <link rel="stylesheet" href="style.css">
         <script src="app.js"></script>
     </head>
     <body>
         <header>
             <h1>Вариант 2</h1>
         </header>
-        <form method="post">
-            <label>Имя</label><br>
-            <input type="text" name="userName" /><br><br>
-            <label>Возраст</label><br>
-            <input type="number" name="userAge" /><br><br>
-            <input type="submit" value="Отправить" />
-        </form>
+        <main>
+            <form action="/register" method="post">
+                <label>Имя<span>*</span></label><br>
+                <input type="text" name="userName" required><br>
+                <label>Возраст<span>*</span></label><br>
+                <input type="number" name="userAge" required><br>
+                <div class="form-group ">
+                    <label for="inputName" class="col-md-1 control-label">select</label>  
+                    <div class="col-md-5">
+                        <div class="checkbox">
+                            <input type="checkbox" name="packersOff" id="packers" value="1"/>
+                            <label for="packers" class="strikethrough">Текст 1</label>
+                        </div>
+                     </div>
+                </div>
+
+                <button type="submit">Отправить</button>
+            </form>
+        </main>
         <footer>
             <p>Васильев М.И. 201-324</p>
         </footer>
     </body>
 </html>
-  
