--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <head lang="ru">
-        <title>Васильев Лаба 3</title>
+        <title>Васильев Экзамен</title>
         <link rel="stylesheet" href="style.css">
         <script src="app.js"></script>
     </head>
